add generator, add gif to fun slide

--- a/css/main.css
+++ b/css/main.css
@@ -158,10 +158,10 @@ a:active {
     background-position: 70%;
 }
 .s51{
-    background: url('../media/2jz\ colored.gif');
-    background-size: 20%;
+    background: url('../media/2jz_colored_s_better.gif');
+    background-size: 40%;
     background-repeat: no-repeat;
-    background-position: 70%;
+    background-position: 80%;
 }
 
 .section{
