--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,12 @@ a:active {
     background-repeat: no-repeat;
     background-position: 250%;
 }
+.s13{
+    background: url('../media/r6_rev.gif');
+    background-size: 90%;
+    background-repeat: no-repeat;
+    background-position: 250%;
+}
 .s21{
     background: url('../media/plotter.gif');
     background-size: 70%;
