--- a/css/main.css
+++ b/css/main.css
@@ -82,10 +82,10 @@ a:active {
 
 /* backgrounds */
 .s11{
-    background: url('../media/datalogger2.2_fr.gif');
-    background-size: 80%;
+    background: url('../media/tb3_rev.gif');
+    background-size: 90%;
     background-repeat: no-repeat;
-    background-position: 150%;
+    background-position: 250%;
 }
 .s12{
     background: url('../media/2jz_colored_s_better.gif');
@@ -94,77 +94,83 @@ a:active {
     background-position: 80%;
 }
 .s13{
-    background: url('../media/tb3_rev.gif');
-    background-size: 90%;
-    background-repeat: no-repeat;
-    background-position: 250%;
-}
-.s14{
     background: url('../media/r6_rev.gif');
     background-size: 80%;
     background-repeat: no-repeat;
     background-position: 160%;
 }
 .s21{
-    background: url('../media/plotter.gif');
-    background-size: 70%;
+    background: url('../media/datalogger2.2_fr.gif');
+    background-size: 80%;
     background-repeat: no-repeat;
-    background-position: 100%;
+    background-position: 150%;
 }
 .s22{
-    background: url('../media/smartwatch.gif');
-    background-size: 70%;
-    background-repeat: no-repeat;
-    background-position: 100%;
-}
-.s23{
-    background: url('../media/blender_logo.png');
-    background-size: 25%;
-    background-repeat: no-repeat;
-    background-position: 80%;
-}
-.s31{
-    background: url('../media/boeing_p3.gif');
-    background-size: 90%;
-    background-position: 250%;
-    background-repeat: no-repeat;
-}
-.s32{
-    background: url('../media/sae.gif');
-    background-size: 90%;
-    background-repeat: no-repeat;
-    background-position: 250%;
-}
-.s33{
-    background: url('../media/speedy_g.gif');
-    background-size: 90%;
-    background-position: 250%;
-    background-repeat: no-repeat;
-}
-.s34{
-    background: url('../media/foomie.gif');
-    background-size: 90%;
-    background-position: 250%;
-    background-repeat: no-repeat;
-}
-.s35{
-    background: url('../media/ft.gif');
-    background-size: 90%;
-    background-position: 250%;
-    background-repeat: no-repeat;
-}
-.s41{
-    background: url('../media/automotive.gif');
-    background-size: 20%;
-    background-repeat: no-repeat;
-    background-position: 70%;
-}
-.s51{
     background: url('../media/2jz_colored_s_better.gif');
     background-size: 40%;
     background-repeat: no-repeat;
     background-position: 80%;
 }
+.s31{
+    background: url('../media/plotter.gif');
+    background-size: 70%;
+    background-repeat: no-repeat;
+    background-position: 100%;
+}
+.s32{
+    background: url('../media/smartwatch.gif');
+    background-size: 70%;
+    background-repeat: no-repeat;
+    background-position: 100%;
+}
+.s33{
+    background: url('../media/blender_logo.png');
+    background-size: 25%;
+    background-repeat: no-repeat;
+    background-position: 80%;
+}
+.s41{
+    background: url('../media/boeing_p3.gif');
+    background-size: 90%;
+    background-position: 250%;
+    background-repeat: no-repeat;
+}
+.s42{
+    background: url('../media/sae.gif');
+    background-size: 90%;
+    background-repeat: no-repeat;
+    background-position: 250%;
+}
+.s43{
+    background: url('../media/speedy_g.gif');
+    background-size: 90%;
+    background-position: 250%;
+    background-repeat: no-repeat;
+}
+.s44{
+    background: url('../media/foomie.gif');
+    background-size: 90%;
+    background-position: 250%;
+    background-repeat: no-repeat;
+}
+.s45{
+    background: url('../media/ft.gif');
+    background-size: 90%;
+    background-position: 250%;
+    background-repeat: no-repeat;
+}
+.s51{
+    background: url('../media/automotive.gif');
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position: 70%;
+}
+/* .s51{
+    background: url('../media/2jz_colored_s_better.gif');
+    background-size: 40%;
+    background-repeat: no-repeat;
+    background-position: 80%;
+} */
 .section{
     z-index: 0;
     padding-top: 0px !important;
