--- a/css/main.css
+++ b/css/main.css
@@ -165,12 +165,12 @@ a:active {
     background-repeat: no-repeat;
     background-position: 70%;
 }
-/* .s51{
-    background: url('../media/2jz_colored_s_better.gif');
-    background-size: 40%;
+.s52{
+    background: url('../media/automotive.gif');
+    background-size: 20%;
     background-repeat: no-repeat;
-    background-position: 80%;
-} */
+    background-position: 70%;
+}
 .section{
     z-index: 0;
     padding-top: 0px !important;
