--- a/css/main.css
+++ b/css/main.css
@@ -106,10 +106,10 @@ a:active {
     background-position: 150%;
 }
 .s22{
-    background: url('../media/2jz_colored_s_better.gif');
-    background-size: 40%;
+    background: url('../media/do13.gif');
+    background-size: 70%;
     background-repeat: no-repeat;
-    background-position: 80%;
+    background-position: 100%;
 }
 .s31{
     background: url('../media/boeing_p3.gif');
