--- a/css/main.css
+++ b/css/main.css
@@ -88,10 +88,10 @@ a:active {
     background-position: 250%;
 }
 .s12{
-    background: url('../media/2jz_colored_s_better.gif');
-    background-size: 40%;
+    background: url('../media/adas.gif');
+    background-size: 60%;
     background-repeat: no-repeat;
-    background-position: 80%;
+    background-position: 100%;
 }
 .s13{
     background: url('../media/r6_rev.gif');
