--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,12 @@ a:active {
     background-position: 160%;
 }
 .s12{
+    background: url('../media/automotive.gif');
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position: 70%;
+}
+.s13{
     background: url('../media/datalogger2.2_fr.gif');
     background-size: 80%;
     background-repeat: no-repeat;
