add background for website generation

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,12 @@ a:active {
     background-repeat: no-repeat;
     background-position: 70%;
 }
+.s62{
+    background: url('../media/coding.gif');
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position: 70%;
+}
 .s71{
     background: url('../media/2jz_colored_s_better.gif');
     background-size: 40%;
