--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,30 @@ a:active {
 }
 
 /* backgrounds */
+.s11{
+    background: url('../media/do14.gif');
+    background-size: 70%;
+    background-repeat: no-repeat;
+    background-position: 100%;
+}
+.s12{
+    background: url('../media/is300 toon - mbd.gif');
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: 100%;
+}
+.s13{
+    background: url('../media/automotive.gif');
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position: 70%;
+}
+.s14{
+    background: url('../media/datalogger2.2_fr.gif');
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: 150%;
+}
 .s21{
     background: url('../media/tb3_rev.gif');
     background-size: 90%;
@@ -98,30 +122,6 @@ a:active {
     background-size: 80%;
     background-repeat: no-repeat;
     background-position: 160%;
-}
-.s11{
-    background: url('../media/do14.gif');
-    background-size: 70%;
-    background-repeat: no-repeat;
-    background-position: 100%;
-}
-.s12{
-    background: url('../media/automotive.gif');
-    background-size: 20%;
-    background-repeat: no-repeat;
-    background-position: 70%;
-}
-.s13{
-    background: url('../media/automotive.gif');
-    background-size: 20%;
-    background-repeat: no-repeat;
-    background-position: 70%;
-}
-.s14{
-    background: url('../media/datalogger2.2_fr.gif');
-    background-size: 80%;
-    background-repeat: no-repeat;
-    background-position: 150%;
 }
 .s31{
     background: url('../media/boeing_p3.gif');
