--- a/css/main.css
+++ b/css/main.css
@@ -94,10 +94,10 @@ a:active {
     background-position: 100%;
 }
 .s13{
-    background: url('../media/automotive.gif');
-    background-size: 20%;
+    background: url('../media/tractor_trailer.gif');
+    background-size: 60%;
     background-repeat: no-repeat;
-    background-position: 70%;
+    background-position: 100%;
 }
 .s14{
     background: url('../media/datalogger2.2_fr.gif');
