--- a/css/main.css
+++ b/css/main.css
@@ -80,143 +80,36 @@ a:active {
     text-decoration: underline;
 }
 
-/* backgrounds */
-.s11{
-    background: url('../media/IS300_drifting.gif');
-    background-size: 70%;
-    background-repeat: no-repeat;
-    background-position: 100%;
+.bg-video {
+    position: absolute;
+    height: 110%;
+    right: 0;
+    bottom: 0;
+    object-fit: cover;
+    z-index: -1;
+    object-position: right center;
+    background-size: 100% 100%;
+    background-color: black; /* in case the video doesn't fit the whole page*/
+    background-position: center center;
+    background-size: cover;
+    object-fit: cover;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
-.s12{
-    background: url('../media/do14.gif');
-    background-size: 70%;
-    background-repeat: no-repeat;
-    background-position: 100%;
-}
-.s13{
-    background: url('../media/is300 toon - mbd.gif');
-    background-size: 60%;
-    background-repeat: no-repeat;
-    background-position: 100%;
-}
-.s14{
-    background: url('../media/tractor_trailer.gif');
-    background-size: 60%;
-    background-repeat: no-repeat;
-    background-position: 100%;
-}
-.s15{
-    background: url('../media/datalogger2.2_fr.gif');
-    background-size: 80%;
-    background-repeat: no-repeat;
-    background-position: 150%;
-}
-.s21{
-    background: url('../media/tb3_rev.gif');
-    background-size: 90%;
-    background-repeat: no-repeat;
-    background-position: 250%;
-}
-.s22{
-    background: url('../media/adas.gif');
-    background-size: 60%;
-    background-repeat: no-repeat;
-    background-position: 100%;
-}
-.s23{
-    background: url('../media/r6_rev.gif');
-    background-size: 80%;
-    background-repeat: no-repeat;
-    background-position: 160%;
-}
-.s31{
-    background: url('../media/boeing_p3.gif');
-    background-size: 90%;
-    background-position: 250%;
-    background-repeat: no-repeat;
-}
-.s32{
-    background: url('../media/sae.gif');
-    background-size: 90%;
-    background-repeat: no-repeat;
-    background-position: 250%;
-}
-.s33{
-    background: url('../media/speedy_g.gif');
-    background-size: 90%;
-    background-position: 250%;
-    background-repeat: no-repeat;
-}
-.s34{
-    background: url('../media/foomie.gif');
-    background-size: 90%;
-    background-position: 250%;
-    background-repeat: no-repeat;
-}
-.s35{
-    background: url('../media/ft.gif');
-    background-size: 90%;
-    background-position: 250%;
-    background-repeat: no-repeat;
-}
-.s41{
-    background: url('../media/plotter.gif');
-    background-size: 70%;
-    background-repeat: no-repeat;
-    background-position: 100%;
-}
-.s42{
-    background: url('../media/smartwatch.gif');
-    background-size: 70%;
-    background-repeat: no-repeat;
-    background-position: 100%;
-}
-.s51{
-    background: url('../media/blender_logo.png');
-    background-size: 25%;
-    background-repeat: no-repeat;
-    background-position: 80%;
-}
-.s52{
-    background: url('../media/r6_rev.gif');
-    background-size: 80%;
-    background-repeat: no-repeat;
-    background-position: 160%;
-}
-.s53{
-    background: url('../media/3d_printer.gif');
-    background-size: 60%;
-    background-repeat: no-repeat;
-    background-position: 80%;
-}
-.s61{
-    background: url('../media/automotive.gif');
-    background-size: 20%;
-    background-repeat: no-repeat;
-    background-position: 70%;
-}
-.s62{
-    background: url('../media/automotive.gif');
-    background-size: 20%;
-    background-repeat: no-repeat;
-    background-position: 70%;
-}
-.s62{
-    background: url('../media/coding.gif');
-    background-size: 20%;
-    background-repeat: no-repeat;
-    background-position: 70%;
-}
-.s71{
-    background: url('../media/2jz_colored_s_better.gif');
-    background-size: 40%;
-    background-repeat: no-repeat;
-    background-position: 80%;
-}
+
 .section{
-    z-index: 0;
-    padding-top: 0px !important;
-    margin-top: 0% !important;
+    position: relative;
+    background-size: cover;
+    overflow: hidden;
+    height: 100%;
+    margin-top: 0;
+    height: 100% !important;
+}
+.slide {
+    position: relative;
+    background-size: cover;
+    overflow: hidden;
+    background-repeat: no-repeat;
     height: 100% !important;
 }
 
